--- a/teste/pom.xml
+++ b/teste/pom.xml
@@ -13,6 +13,11 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpasyncclient</artifactId>
+			<version>4.1.4</version>
+		</dependency>
 	</dependencies>
-	
+
 </project>
